--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,8 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  JORNET_LEADERBOARD_ID: ${{ secrets.JORNET_LEADERBOARD_ID }}
+  JORNET_LEADERBOARD_KEY: ${{ secrets.JORNET_LEADERBOARD_KEY }}
 
 jobs:
   # Run cargo test
