--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.14", features = [ "wav" ] }
+bevy = { version = "0.14", features = [ "wav", "mp3" ] }
 bevy_jornet = "0.8.0"
 bevy_particle_systems = "0.13.0"
 rand = "0.8.5"
